# chroma_mcp_server

./: .coveragerc  .cursorrules  .editorconfig  .env.template  .gitignore  .pre-commit-config.yaml  .windsurfrules  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  README.md  SECURITY.md  build.sh  build_package.py  develop.sh  docker-compose.yml  publish.sh  pyproject.toml  requirements.txt  run_chroma_mcp.py  run_chroma_mcp_uvx.py  run_chromamcp_local.py  run_server.py  run_tests.py  run_with_uvx.py  setup.py  setup.sh  setup_for_uvx.py  smithery.yaml  test-results.xml  test.sh  test_uvx_install.sh  test_workflow_20250516_235202.json  test_workflow_20250516_235257.json  test_workflow_complete_20250517_000340.json
.cursor/: mcp.json
.cursor/rules/: auto_log_chat.mdc  markdown-rules.mdc  memory-integration-rule.mdc  python-github-rules.mdc  testing-and-build-guide.mdc
.github/: .copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
docs/: LICENSE.md  README.md  api_reference.md  cursor_integration.md  developer_guide.md  embeddings_and_thinking.md  getting_started.md  getting_started_second_brain.md  hatch_migration_plan.md  hatch_smithery_integration.md  mcp-reference.md  mcp_server_status.md  mcp_test_flow.md  refactor_plan_mcp_sdk_compliance.md  refactor_plan_mcp_sdk_compliance_v2.md  server_entry_point_refactoring.md  testing_installation.md  thinking-utils-guide.md  uvx_integration_status.md  value-add-chroma-mcp-server.md
docs/automation/: README.md  git_hooks.md
docs/integration/: README.md  automated_chat_logging.md  ide_integration.md  mcp_integration.md  pytest_plugin_usage.md
docs/logging/: README.md  server_logging.md
docs/refactoring/: README.md  client_rename_plan.md  enterprise-readiness-upgrade.md  hatch_smithery_integration.md  learning_validation_workflow.md  local_rag_pipeline_plan.md  local_rag_pipeline_plan_v1.md  local_rag_pipeline_plan_v2.md  local_rag_pipeline_plan_v3.md  local_rag_pipeline_plan_v4.md  persistent-developer-memory-service-v1.md  refactor_plan_mcp_sdk_compliance_v2.md  shell_script_migration_plan.md  test_artifacts_organization_plan.md
docs/rules/: README.md  auto_log_chat.md  chroma-memory-rules.md  memory-integration-rules.md  python-github-rules.md  terraform-coding-rules.md  testing-and-build-guide.md
docs/scripts/: README.md  analyze-chat-history.md  chroma-client.md  chroma-mcp-client.md  log-chat.md  log-error.md  log-quality-check.md  log-test-results.md  promote-learning.md  record-thought.md  review-and-promote.md  validate-evidence.md
docs/thinking_tools/: README-thinking.md  embeddings_and_thinking.md  sequential_thinking.md  thinking-utils-for-llms.md  thinking-utils-guide.md
docs/usage/: README.md  automated_test_workflow.md  context_module.md  daily_workflow_integration.md  derived_learnings.md  enhanced_context_capture.md  implicit_learning.md  roi_measurement.md  semantic_chunking.md  test_result_integration.md  tool_usage_format.md  troubleshooting_context_capture.md  validation_system.md
examples/: simple_client.py  simple_thinking_example.py  thinking_example.py
scripts/: analyze_chat_history.sh  build.sh  chroma_client.sh  develop.sh  log_chat.sh  log_error.sh  log_quality_check.sh  log_test_results.sh  promote_learning.sh  publish.sh  release.sh  review_and_promote.sh  run_chroma_mcp_server_dev.sh  test.sh  test_uvx_install.sh  thinking.sh  update_mcp_version.sh  validate_evidence.sh
src/: __init__.py
src/chroma_mcp/: __init__.py  __main__.py  app.py  cli.py  server.py  types.py
src/chroma_mcp/dev_scripts/: __init__.py  build.py  develop.py  project_root.py  publish.py  release.py
src/chroma_mcp/handlers/: __init__.py  collection_handler.py  document_handler.py  thinking_handler.py
src/chroma_mcp/tools/: auto_log_chat_bridge.py  collection_tools.py  document_tools.py  thinking_tools.py
src/chroma_mcp/utils/: __init__.py  chroma_client.py  client.py  config.py  errors.py  logger_setup.py
src/chroma_mcp_client/: __init__.py  analysis.py  auto_log_chat_impl.py  cli.py  connection.py  context.py  demo_helper.py  deprecated_cli.py  indexing.py  interactive_promoter.py  learnings.py  pytest_plugin.py  query.py
src/chroma_mcp_client/scripts/: __init__.py  analyze_chat.py  log_chat.py  log_error.py  log_quality.py  log_test.py  promote_learning.py  review_promote.py  validate_evidence.py
src/chroma_mcp_client/validation/: __init__.py  code_quality_collector.py  evidence_collector.py  promotion.py  runtime_collector.py  schemas.py  test_collector.py  test_workflow.py
src/chroma_mcp_thinking/: __init__.py  thinking_cli.py  thinking_session.py  utils.py
tests/: __init__.py  conftest.py  run_chroma_mcp_test.sh  test_app_log_cleanup.py  test_chroma_ops.py  test_cli.py  test_server.py  verify_chroma_mcp.py
tests/chroma_mcp_client/: test_analysis.py  test_auto_log_chat_integration.py  test_bidirectional_links.py  test_cli.py  test_connection.py  test_context.py  test_deprecated_cli.py  test_indexing.py  test_interactive_promoter.py  test_query.py
tests/chroma_mcp_client/validation/: test_code_quality_collector.py  test_collector_test.py  test_evidence_collector.py  test_promotion.py  test_runtime_collector.py  test_schemas.py  test_test_collector.py  test_test_workflow.py
tests/handlers/: test_collection_handler.py  test_document_handler.py  test_thinking_handler.py
tests/scripts/: __init__.py  test_analyze_chat.py  test_build.py  test_develop.py  test_log_chat.py  test_log_error.py  test_log_quality.py  test_log_test.py  test_promote_learning.py  test_publish.py  test_release.py  test_review_promote.py  test_validate_evidence.py
tests/thinking/: __init__.py  test_thinking_cli.py  test_thinking_session.py  test_utils.py
tests/tools/: test_auto_log_chat_bridge.py  test_collection_tools.py  test_document_tools.py  test_thinking_tools.py
tests/utils/: test_chroma_client.py  test_init.py  test_logger_setup.py
